fix: dark mode in html

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -17,10 +17,11 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: white;
+    color-scheme: dark;
   }
+
   body {
-    color: black;
-    background: white;
+    color: dark;
+    background: dark;
   }
 }
